# a2a-registry

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MCP_INTEGRATION.md  MIGRATION_STATUS.md  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  project.md  pyproject.toml  read.md  redesign.md  requirements.txt  todo.md
.claude/skills/generate-notes/: SKILL.md
.config/: wt.toml
.github/: pull_request_template.md
.github/workflows/: deploy-backend.yml  deploy-hello-world-agent.yml  pr-ci.yml  pr-comment.yml  publish.yml  validate-pr.yml  validate-pr.yml.disabled
agents/: ARCHIVED.md  a2abench.json  andru-intelligence.json  anybrowse.json  business-source.json  chess-agent.json  clawstarter.json  cliff-the-surveyor.json  cloud-latitude-labs.json  cloud-latitude.json  code-agent.json  coinrailz.json  data-agent.json  essendant.json  example-weather-bot.json  excel.json  excellent-corporation.json  ganjamon.json  general-data.json  gloria.json  hello-world-agent.json  hp.json  insurance-company.json  kevros-governance.json  lokal.json  luminary-lane.json  moltbridge.json  nexara-sovereign-auditor.json  opspawn.json  paki-curator.json  planning-agent.json  policycheck.json  prea.json  research-agent.json  s-s-plastic-works.json  s-s-solutions-llc.json  scientific-medical-services-llc-fz.json  smp-tutoring.json  sodexo-group.json  solace-corporation.json  (+89 more)
agents/bot-hub/: agent-card.json
backend/: .env.example  Dockerfile  README.md  admin_app.py  alembic.ini  pyproject.toml  run.py  run_admin.py  seed.py  worker.py
backend/app/: __init__.py  agent_card.py  config.py  database.py  logging_config.py  main.py  mcp_server.py  models.py  repositories.py  smoke_test.py  utils.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.sql  002_add_a2a_spec_fields.sql  003_add_flag_details.sql  004_add_health_check_source.sql  005_add_conformance_errors.sql  006_add_maintainer_notes.sql  007_add_task_conformance.sql
backend/tests/: conftest.py  test_api_agents.py  test_churn_report.py  test_endpoints.py  test_error_leak.py  test_smoke.py  test_smoke_test.py  test_status_notes.py  test_utils.py  test_validators.py  test_worker_refresh.py
client-python/: README.md  pyproject.toml
client-python/examples/: a2a_integration.py  advanced_usage.py  demo_a2a_integration.py  send_messages.py  validate_async_connect.py
client-python/src/a2a_registry/: __init__.py  _base.py  api_client.py  client.py  mcp_server.py  models.py
client-python/tests/: test_client_real_world.py
docs/: index.html
hello-world-agent/: .gitignore  Dockerfile  README.md  hello-world-agent.json  main.py  package.json  pyproject.toml  worker.js  wrangler.toml
helm/a2aregistry/: Chart.yaml  values-prod.yaml  values.yaml
helm/a2aregistry/templates/: admin.yaml  api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-service.yaml  hello-world-deployment.yaml  hello-world-healthcheck.yaml  hello-world-httproute.yaml  httproute.yaml  migration-job.yaml  serviceaccount.yaml  worker-deployment.yaml
k8s/: README.md  deployment.yaml  ingress.yaml  secrets.yaml.example  worker.yaml
schemas/: a2a-official.schema.json  agent.schema.json  registry-agent.schema.json
scripts/: check_conformance.py  churn_report.py  export_agents.py  generate_registry.py  generate_sitemap.py  scrape_agents.py  seed_agents.py  seed_data.json  sync_to_db.py  validate_agent.py  validate_agent_v2.py
scripts/archived/: README.md  generate_registry.py
tests/: test_conforming_agents.py  test_invalid_agents.json  test_validation.py
website/: .env.example  Dockerfile  README.md  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
website/public/: robots.txt  sitemap.xml  test.html
website/public/favicon/: site.webmanifest
website/src/: App.jsx  env.d.ts  index.css  main.jsx
website/src/components/: AgentCard.jsx  AgentGrid.jsx  AgentPageClient.jsx  FAQ.jsx  FeedbackWidget.jsx  Header.jsx  HealthBadge.jsx  HomeApp.jsx  InspectionDeck.jsx  IntegrationGuide.jsx  Layout.jsx  LiveFeed.jsx  Sidebar.jsx  StatsBar.jsx  SubmitForm.jsx  Terminal.jsx
website/src/components/ui/: dialog.jsx  separator.jsx
website/src/hooks/: useMediaQuery.js
website/src/layouts/: BaseLayout.astro
website/src/lib/: analytics.js  api.js  sampleRegistry.js  utils.js
website/src/pages/: Admin.jsx  Submit.jsx  admin.astro  index.astro  submit.astro
website/src/pages/agents/: [slug].astro
website/src/react-pages/: Submit.jsx
website/src/scripts/: posthog.ts
website/src/utils/: a2aClient.js
