[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-registry"
version = "1.0.0"
description = "A community-driven, open-source directory of AI agents using the A2A Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "A2A Registry Community", email = "contact@a2aregistry.org"}
]
keywords = ["a2a", "agents", "ai", "registry", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies for registry scripts
dependencies = [
    "jsonschema>=4.20.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=23.0.0",
    "ty>=0.0.1a1",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://www.a2aregistry.org"
Documentation = "https://github.com/prassanna-ravishankar/a2a-registry"
Repository = "https://github.com/prassanna-ravishankar/a2a-registry"
Issues = "https://github.com/prassanna-ravishankar/a2a-registry/issues"

[tool.setuptools]
# This is a scripts-only package, no Python packages to install
py-modules = []

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
